<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- Syystème -->
    <string name="app_name">speed_quiz</string>
    <string name="app_title">Speed quiz</string>

    <!-- Ecran principale -->
    <string name="main_add_player">Add a player</string>
    <string name="main_play">Play</string>
    <string name="main_play_edit_label">Add a player</string>
    <string name="main_add_player_OK">OK</string>
    <string name="main_add_player_Cancel">Cancel</string>

    <!-- Ecran de jeu -->
    <string name="game_title">Speed quiz</string>
    <string name="game_replay">Replay</string>
    <string name="game_menu">Menu</string>
    <string name="player_name">Player name</string>
</resources>